# Timer

./: .eslintrc.cjs  .gitignore  .prettierrc.json  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.playwright-mcp/: page-2026-07-13T10-58-15-775Z.yml  page-2026-07-13T10-58-31-357Z.yml  page-2026-07-13T10-58-44-324Z.yml  page-2026-07-13T10-58-54-516Z.yml  page-2026-07-13T11-00-25-729Z.yml  page-2026-07-13T11-00-47-625Z.yml  page-2026-07-13T11-00-57-679Z.yml  page-2026-07-13T11-01-05-377Z.yml  page-2026-07-13T11-15-07-050Z.yml  page-2026-07-13T11-15-45-093Z.yml  page-2026-07-13T11-15-54-230Z.yml  page-2026-07-13T11-16-07-206Z.yml  page-2026-07-13T11-16-56-702Z.yml  page-2026-07-13T11-17-12-787Z.yml  page-2026-07-13T11-17-23-661Z.yml  page-2026-07-13T11-17-31-171Z.yml  page-2026-07-13T11-29-14-284Z.yml  page-2026-07-13T11-29-25-060Z.yml  page-2026-07-13T11-29-31-427Z.yml  page-2026-07-13T11-29-42-456Z.yml  page-2026-07-13T11-30-09-798Z.yml  page-2026-07-13T11-42-59-747Z.yml  page-2026-07-13T11-43-10-703Z.yml  page-2026-07-13T11-43-22-182Z.yml  page-2026-07-13T11-43-51-628Z.yml  page-2026-07-13T11-44-17-361Z.yml  page-2026-07-13T11-44-27-885Z.yml  page-2026-07-13T11-44-33-374Z.yml
docs/: 2026-07-14-main-ui-redesign-design.md
src/: App.tsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: TimerRing.test.tsx  dialogs.test.tsx  setup.ts  (+8 more)
(+81 files in other folders)
