[package]
name = "study-timer"
version = "1.0.0"
description = "桌面学习时长记录器"
authors = ["TianLutao"]
edition = "2021"

[lib]
name = "study_timer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
